--- a/src/main/resources/assets/coloredpipes/lang/en_US.lang
+++ b/src/main/resources/assets/coloredpipes/lang/en_US.lang
@@ -62,4 +62,5 @@ tip.PipeItemsMagenta=Can't connect to,colorsed Pipes except magenta one.
 tip.PipeItemsOrange=Can't connect to,colorsed Pipes except orange one.
 tip.PipeItemsWhite=Can't connect to,colorsed Pipes except white one.
 #CreativeTab
-itemGroup.buildcraft.ColoredPipes=ColoredPipes
+itemGroup.buildcraft.ColoredPipes-Pipes=ColoredPipes - Pipes
+itemGroup.buildcraft.ColoredPipes-Others=ColoredPipes - Misc
